add form validity authentication (csrf middleware token)

--- a/lecture3/tasks/templates/tasks/add.html
+++ b/lecture3/tasks/templates/tasks/add.html
@@ -1,6 +1,7 @@
 {% extends "tasks/layout.html" %} {% block body %}
 <h1>Add Task</h1>
-<form action="">
+<form action="{% url 'tasks:add' %}" method="POST">
+  {% csrf_token %}
   <input type="text" name="task" />
   <input type="submit" />
 </form>
